--- a/package.json
+++ b/package.json
@@ -3,24 +3,70 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "prisma generate && next dev",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@node-rs/argon2": "^2.0.2",
+    "@prisma/client": "^6.18.0",
+    "@prisma/extension-accelerate": "^2.0.2",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tiptap/core": "^3.9.1",
+    "@tiptap/extension-character-count": "^3.9.1",
+    "@tiptap/extension-code-block-lowlight": "^3.9.1",
+    "@tiptap/extension-placeholder": "^3.9.1",
+    "@tiptap/extension-subscript": "^3.9.1",
+    "@tiptap/extension-superscript": "^3.9.1",
+    "@tiptap/extension-table": "^3.9.1",
+    "@tiptap/extension-table-cell": "^3.9.1",
+    "@tiptap/extension-table-header": "^3.9.1",
+    "@tiptap/extension-table-row": "^3.9.1",
+    "@tiptap/extension-task-item": "^3.9.1",
+    "@tiptap/extension-task-list": "^3.9.1",
+    "@tiptap/extension-text-style": "^3.9.1",
+    "@tiptap/extension-typography": "^3.9.1",
+    "@tiptap/pm": "^3.9.1",
+    "@tiptap/react": "^3.9.1",
+    "@tiptap/starter-kit": "^3.9.1",
+    "@tiptap/suggestion": "^3.9.1",
+    "better-auth": "^1.3.32",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "dotenv": "^17.2.3",
+    "fuse.js": "^7.1.0",
+    "lowlight": "^3.3.0",
+    "lucide-react": "^0.548.0",
+    "next": "16.0.0",
+    "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "tippy.js": "^6.3.7",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0"
+    "eslint-config-next": "16.0.0",
+    "prisma": "^6.18.0",
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5"
   }
 }
