--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@node-rs/argon2": "^2.0.2",
     "@prisma/client": "^6.18.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
@@ -54,6 +56,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tippy.js": "^6.3.7",
+    "use-debounce": "^10.0.6",
     "zod": "^4.1.12"
   },
   "devDependencies": {
